# ModFlux

./: .gitignore  README.md  pyproject.toml  setup.py
migrations/: 0001_main.sql  0002_settings.sql
modflux/: cli.py  config.py  db.py  game_manager.py  migrate.py  mods.py  nexus.py  qt.py  utils.py
modflux/models/: games.py  mods.py
modflux/nexus/: api.py  models.py
modflux/ui/: download.py  game_settings.py  games.py  main.py  settings.py  tags.py
ui/: filter_edit.ui  game_settings.ui  games.ui  main.ui  settings.ui
